--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <description>TelegramBot</description>
     <properties>
         <java.version>17</java.version>
-        <telegram.version>6.5.0</telegram.version>
+        <telegram.version>6.9.7.1</telegram.version>
     </properties>
     <dependencies>
         <dependency>
@@ -44,6 +44,7 @@
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
+            <version>42.7.0</version>
         </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
